--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 
 <body>
     <header>
-        <h1 class="text-3xl">Hunting Phone</h1>
+        <h1 class="text-3xl font-semibold pl-5">Hunting Phone</h1>
     </header>
-    <main>
-        <section>
-            <div id="div-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:mx-10 mx-4">
+    <main class="">
+        <section class="flex items-center mx-4 mt-2">
+            <input id="search-field" type="text" placeholder="Search phone name..." class="input input-bordered bg-gray-100 font-medium md:w-full md:max-w-xs" />
+              <button onclick="handleSearch()" class="py-[12px] rounded-r-lg -ml-4 px-4 bg-purple-700 ">Search</button>
+        </section>
+        <!-- search result -->
+        <section class="">
+            <div id="div-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:mx-10 mx-2 mt-4">
               
             </div>
         </section>
