--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 <body>
     <header>
-        <h1 class="text-3xl font-semibold pl-5">Hunting Phone</h1>
+       
     </header>
     <main class="">
-        <section class="flex items-center mx-4 mt-2">
-            <input id="search-field" type="text" placeholder="Search phone name..." class="input input-bordered bg-gray-100 font-medium md:w-full md:max-w-xs" />
-              <button onclick="handleSearch()" class="py-[12px] rounded-r-lg -ml-4 px-4 bg-purple-700 ">Search</button>
+        <h1 class="text-3xl font-semibold pl-5 text-center mb-5">Hunting Phone</h1>
+        <section class="flex justify-center items-center mx-4 ">
+            <input id="search-field" type="text" placeholder="Search 3 phone name..." class="input input-bordered bg-gray-100 font-medium md:w-full md:max-w-xs" />
+              <button onclick="handleSearch()" class="py-[12px] rounded-r-lg -ml-4 px-4 bg-purple-700 text-white font-semibold">Search</button>
         </section>
         <!-- search result -->
         <section class="">
