--- a/index.html
+++ b/index.html
@@ -16,14 +16,27 @@
     </header>
     <main class="">
         <h1 class="text-3xl font-semibold pl-5 text-center mb-5">Hunting Phone</h1>
-        <section class="flex justify-center items-center mx-4 ">
+        <section class="flex flex-col lg:flex-row justify-center items-center mx-4 ">
+          <div class="flex">
             <input id="search-field" type="text" placeholder="Search 3 phone name..." class="input input-bordered bg-gray-100 font-medium md:w-full md:max-w-xs" />
-              <button onclick="handleSearch()" class="py-[12px] rounded-r-lg -ml-4 px-4 bg-purple-700 text-white font-semibold">Search</button>
+            <button onclick="handleSearch()" class="py-[12px] rounded-r-lg -ml-4 px-4 bg-purple-700 text-white font-semibold">Search</button>
+          </div>
+          <!-- another search field -->
+          <!-- <div class="flex">
+            <input id="search-field2" type="text" placeholder="Search 3 phone name..." class="input ml-4 input-bordered bg-gray-100 font-medium md:w-full md:max-w-xs" />
+            <button onclick="handleSearch2()" class="py-[12px] rounded-r-lg -ml-4 px-4 bg-purple-700 text-white font-semibold">Search</button>
+          </div> -->
         </section>
         <!-- search result -->
-        <section class="">
+        <section>
+            <div class="text-center my-40">
+                <span id="loading-spinner" class="loading loading-spinner loading-lg hidden"></span>
+            </div>
             <div id="div-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:mx-10 mx-2 mt-4">
               
+            </div>
+            <div id="show-all-data", class="hidden text-center">
+                <button class="btn btn-active btn-secondary mb-10">Show All</button>
             </div>
         </section>
     </main>
