--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <div id="div-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:mx-10 mx-2 mt-4">
               
             </div>
+            <!-- show all button -->
             <div id="show-all-data", class="hidden text-center">
-                <button class="btn btn-active btn-secondary mb-10">Show All</button>
+                <button onclick="handleShowAll()" class="btn btn-active btn-secondary mb-10">Show All</button>
             </div>
         </section>
     </main>
